// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 1`] = `
Object {
  "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
  "name": "Customers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 2`] = `
Object {
  "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
  "name": "Unsatisfied Customers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 3`] = `
Object {
  "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
  "name": "Early Adopters",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 4`] = `
Object {
  "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
  "name": "Testers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 5`] = `
Object {
  "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
  "name": "Subscribers",
  "type": "group",
}
`;

exports[`GroupsRouterForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_groups"
  title="Split by Group Membership"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by group membership",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Split by Group Membership",
        "type": "split_by_groups",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    Select the groups you'd like to split by below
  </p>
  <AssetSelector
    entry={
      Object {
        "value": Array [
          Object {
            "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
            "name": "Customers",
            "type": "group",
          },
          Object {
            "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
            "name": "Unsatisfied Customers",
            "type": "group",
          },
          Object {
            "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
            "name": "Early Adopters",
            "type": "group",
          },
          Object {
            "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
            "name": "Testers",
            "type": "group",
          },
          Object {
            "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
            "name": "Subscribers",
            "type": "group",
          },
        ],
      }
    }
    multi={true}
    name="Groups"
    onChange={[Function]}
    searchable={true}
  />
  <OptionalTextInput
    helpText={
      <Trans
        i18nKey="forms.result_name_help"
        values={
          Object {
            "resultFormat": "@results",
          }
        }
      >
        By naming the result, you can reference it later using [[resultFormat]]
      </Trans>
    }
    maxLength={64}
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`GroupsRouterForm updates should update and save 1`] = `
Object {
  "groups": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "68223118-109f-442a-aed3-7bb3e1eab687",
        "name": "Subscriber",
        "type": "group",
      },
    ],
  },
  "resultName": Object {
    "value": "My Group Result",
  },
  "valid": true,
}
`;

exports[`GroupsRouterForm updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "68223118-109f-442a-aed3-7bb3e1eab687",
              "Subscriber",
            ],
            "category_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "type": "has_group",
            "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Subscriber",
            "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          },
          Object {
            "exit_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
            "name": "Other",
            "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
          },
        ],
        "default_category_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        "operand": "@contact.groups",
        "result_name": "My Group Result",
        "type": "switch",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "split_by_groups",
    },
  },
]
`;
